--- a/NearbyWeather/Base.lproj/Main.storyboard
+++ b/NearbyWeather/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -253,6 +253,7 @@
                     <navigationItem key="navigationItem" id="D4f-tt-Xjg"/>
                     <connections>
                         <outlet property="buttonRowContainerView" destination="66v-OR-ig0" id="B9G-4b-vS6"/>
+                        <outlet property="buttonRowStackView" destination="cO7-FX-PEe" id="eZj-SU-sIi"/>
                         <outlet property="infoButton" destination="nlV-Vb-JpW" id="9hz-4g-AJb"/>
                         <outlet property="reloadButton" destination="EAw-iC-6ti" id="AOb-PQ-WTB"/>
                         <outlet property="settingsButton" destination="SPo-ZW-m5T" id="BZV-85-nqX"/>
