--- a/NearbyWeather/Welcome.storyboard
+++ b/NearbyWeather/Welcome.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2My-xQ-UEZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2My-xQ-UEZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -30,7 +30,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="G1M-0T-X0l" userLabel="inputTextField">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="G1M-0T-X0l" userLabel="inputTextField" customClass="TextFieldCounter" customModule="TextFieldCounter">
                                 <rect key="frame" x="15" y="124" width="345" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="o7m-8M-lNi"/>
@@ -39,15 +39,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
-                                    <action selector="inputTextFieldEditingChanged:" destination="xMX-To-SMJ" eventType="editingChanged" id="HoM-SU-FH1"/>
+                                    <action selector="inputTextFieldEditingChanged:" destination="xMX-To-SMJ" eventType="editingDidEnd" id="SUB-Pl-O8J"/>
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvN-Ao-mjx">
-                                <rect key="frame" x="112" y="169" width="150" height="30"/>
+                                <rect key="frame" x="112" y="169" width="150" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="2WP-qa-ulu"/>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="150" id="bZu-SV-fkb"/>
-                                    <constraint firstAttribute="height" constant="30" id="jdB-Xy-Ug4"/>
+                                    <constraint firstAttribute="height" constant="36" id="jdB-Xy-Ug4"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
@@ -55,9 +55,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWh-7H-IKM">
-                                <rect key="frame" x="15" y="214" width="345" height="30"/>
+                                <rect key="frame" x="15" y="220" width="345" height="36"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="USJ-Fv-1On"/>
+                                    <constraint firstAttribute="height" constant="36" id="USJ-Fv-1On"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <connections>
@@ -84,7 +84,7 @@
                     <connections>
                         <outlet property="descriptionLabel" destination="LhB-Br-aLm" id="lju-u3-cny"/>
                         <outlet property="getInstructionsButtons" destination="OWh-7H-IKM" id="DMl-MF-n8E"/>
-                        <outlet property="inputTextField" destination="G1M-0T-X0l" id="bGy-rh-M7y"/>
+                        <outlet property="inputTextField" destination="G1M-0T-X0l" id="lPJ-OL-TFQ"/>
                         <outlet property="saveButton" destination="qvN-Ao-mjx" id="m5f-Wy-H2e"/>
                     </connections>
                 </viewController>
@@ -149,7 +149,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2My-xQ-UEZ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="MiB-7n-IJ0">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.28921774030000003" green="0.78628259899999997" blue="0.94946676490000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
