--- a/NearbyWeather/Welcome.storyboard
+++ b/NearbyWeather/Welcome.storyboard
@@ -191,42 +191,121 @@
                         <viewControllerLayoutGuide type="bottom" id="X7u-Gx-lid"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="N7s-aQ-zIO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qH7-3u-4wA" userLabel="descriptionLabel">
-                                <rect key="frame" x="15" y="35" width="345" height="30"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gbe-aY-PQX">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3fD-Kc-EWE">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="191"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="45" translatesAutoresizingMaskIntoConstraints="NO" id="3eh-hE-2I8">
+                                                <rect key="frame" x="15" y="30" width="345" height="161"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAE-mh-Dg3">
+                                                        <rect key="frame" x="0.0" y="0.0" width="345" height="80"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ECZ-Th-9sc">
+                                                                <rect key="frame" x="15" y="15" width="315" height="50"/>
+                                                                <subviews>
+                                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ss-Ab-Lew">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="25" height="50"/>
+                                                                        <subviews>
+                                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ExclamationMark" translatesAutoresizingMaskIntoConstraints="NO" id="daI-wH-afc">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                                                <constraints>
+                                                                                    <constraint firstAttribute="height" constant="25" id="5a0-SS-YOf"/>
+                                                                                    <constraint firstAttribute="width" constant="25" id="y8B-27-znm"/>
+                                                                                </constraints>
+                                                                            </imageView>
+                                                                        </subviews>
+                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                        <constraints>
+                                                                            <constraint firstItem="daI-wH-afc" firstAttribute="top" secondItem="8Ss-Ab-Lew" secondAttribute="top" id="QcF-3a-j9o"/>
+                                                                            <constraint firstItem="daI-wH-afc" firstAttribute="width" secondItem="8Ss-Ab-Lew" secondAttribute="width" id="i01-SX-mKp"/>
+                                                                            <constraint firstItem="daI-wH-afc" firstAttribute="centerX" secondItem="8Ss-Ab-Lew" secondAttribute="centerX" id="ruT-We-MVh"/>
+                                                                        </constraints>
+                                                                    </view>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qH7-3u-4wA" userLabel="descriptionLabel">
+                                                                        <rect key="frame" x="40" y="0.0" width="275" height="50"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                                        <nil key="textColor"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="8Ss-Ab-Lew" firstAttribute="height" secondItem="qH7-3u-4wA" secondAttribute="height" id="Hbp-SX-VJk"/>
+                                                                    <constraint firstAttribute="height" secondItem="qH7-3u-4wA" secondAttribute="height" id="Yje-EP-bEu"/>
+                                                                    <constraint firstItem="8Ss-Ab-Lew" firstAttribute="height" secondItem="ECZ-Th-9sc" secondAttribute="height" id="gfo-Tc-aHj"/>
+                                                                </constraints>
+                                                            </stackView>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstItem="ECZ-Th-9sc" firstAttribute="leading" secondItem="cAE-mh-Dg3" secondAttribute="leading" constant="15" id="FyU-tt-8zL"/>
+                                                            <constraint firstItem="ECZ-Th-9sc" firstAttribute="top" secondItem="cAE-mh-Dg3" secondAttribute="top" constant="15" id="TNh-z8-M64"/>
+                                                            <constraint firstAttribute="trailing" secondItem="ECZ-Th-9sc" secondAttribute="trailing" constant="15" id="hJr-Pu-B1k"/>
+                                                            <constraint firstAttribute="bottom" secondItem="ECZ-Th-9sc" secondAttribute="bottom" constant="15" id="nMm-Uv-SpF"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AXQ-Xv-3UE">
+                                                        <rect key="frame" x="0.0" y="125" width="345" height="36"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07m-68-oho">
+                                                                <rect key="frame" x="97.5" y="0.0" width="150" height="36"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="width" constant="150" id="mzc-Xj-KX8"/>
+                                                                    <constraint firstAttribute="height" constant="36" id="xnM-dy-Kxs"/>
+                                                                </constraints>
+                                                                <state key="normal" title="Button"/>
+                                                                <connections>
+                                                                    <action selector="didTapAskPermissionsButton:" destination="ca8-EZ-NJO" eventType="touchUpInside" id="VYg-0i-dtT"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstItem="07m-68-oho" firstAttribute="centerY" secondItem="AXQ-Xv-3UE" secondAttribute="centerY" id="ELu-Ew-91e"/>
+                                                            <constraint firstItem="07m-68-oho" firstAttribute="height" secondItem="AXQ-Xv-3UE" secondAttribute="height" id="Opl-Fs-rXO"/>
+                                                            <constraint firstItem="07m-68-oho" firstAttribute="centerX" secondItem="AXQ-Xv-3UE" secondAttribute="centerX" id="Vd4-0n-Qdy"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="3eh-hE-2I8" firstAttribute="leading" secondItem="3fD-Kc-EWE" secondAttribute="leading" constant="15" id="FJf-jA-jYX"/>
+                                            <constraint firstItem="3eh-hE-2I8" firstAttribute="top" secondItem="3fD-Kc-EWE" secondAttribute="top" constant="30" id="Rlp-YY-KpN"/>
+                                            <constraint firstAttribute="bottom" secondItem="3eh-hE-2I8" secondAttribute="bottom" id="YLQ-oU-SyR"/>
+                                            <constraint firstAttribute="trailing" secondItem="3eh-hE-2I8" secondAttribute="trailing" constant="15" id="pC6-k6-ML3"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="rw7-PA-fVp"/>
+                                    <constraint firstAttribute="bottom" secondItem="3fD-Kc-EWE" secondAttribute="bottom" id="96B-kI-sYs"/>
+                                    <constraint firstAttribute="trailing" secondItem="3fD-Kc-EWE" secondAttribute="trailing" id="Qm0-Qg-UrO"/>
+                                    <constraint firstItem="3fD-Kc-EWE" firstAttribute="top" secondItem="gbe-aY-PQX" secondAttribute="top" id="eKW-Kv-c0J"/>
+                                    <constraint firstItem="3fD-Kc-EWE" firstAttribute="leading" secondItem="gbe-aY-PQX" secondAttribute="leading" id="juP-v0-BFG"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07m-68-oho">
-                                <rect key="frame" x="112" y="80" width="150" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="150" id="mzc-Xj-KX8"/>
-                                    <constraint firstAttribute="height" constant="30" id="xnM-dy-Kxs"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="didTapAskPermissionsButton:" destination="ca8-EZ-NJO" eventType="touchUpInside" id="VYg-0i-dtT"/>
-                                </connections>
-                            </button>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="qH7-3u-4wA" secondAttribute="trailing" constant="15" id="2o1-Th-xFP"/>
-                            <constraint firstItem="qH7-3u-4wA" firstAttribute="top" secondItem="euE-5E-So3" secondAttribute="bottom" constant="15" id="XWM-kN-qA1"/>
-                            <constraint firstItem="qH7-3u-4wA" firstAttribute="leading" secondItem="N7s-aQ-zIO" secondAttribute="leading" constant="15" id="eUe-EE-Mkf"/>
-                            <constraint firstItem="07m-68-oho" firstAttribute="centerX" secondItem="N7s-aQ-zIO" secondAttribute="centerX" id="h3k-bu-sb2"/>
-                            <constraint firstItem="07m-68-oho" firstAttribute="top" secondItem="qH7-3u-4wA" secondAttribute="bottom" constant="15" id="wYO-TS-RtV"/>
+                            <constraint firstItem="3fD-Kc-EWE" firstAttribute="width" secondItem="N7s-aQ-zIO" secondAttribute="width" id="86Y-jR-lrG"/>
+                            <constraint firstAttribute="trailing" secondItem="gbe-aY-PQX" secondAttribute="trailing" id="Obl-HD-hYD"/>
+                            <constraint firstItem="gbe-aY-PQX" firstAttribute="top" secondItem="euE-5E-So3" secondAttribute="bottom" id="Th5-d3-85P"/>
+                            <constraint firstItem="X7u-Gx-lid" firstAttribute="top" secondItem="gbe-aY-PQX" secondAttribute="bottom" id="dGX-rD-rUL"/>
+                            <constraint firstItem="gbe-aY-PQX" firstAttribute="leading" secondItem="N7s-aQ-zIO" secondAttribute="leading" id="u8K-uz-vLh"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="askPermissionsButton" destination="07m-68-oho" id="VDY-zM-gfC"/>
+                        <outlet property="bubbleView" destination="cAE-mh-Dg3" id="Iaa-VE-RkE"/>
                         <outlet property="descriptionLabel" destination="qH7-3u-4wA" id="iTY-4v-GJR"/>
+                        <outlet property="warningImageView" destination="daI-wH-afc" id="9gN-CA-DcT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eQ2-3W-cfV" userLabel="First Responder" sceneMemberID="firstResponder"/>
